--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,68 @@
-h1 {
-    color:red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: rgba(102, 189, 174, 0.933);
+}
+
+/* Container */
+.container {
+    background-color: #fff;
+    height: 265px;
+    width: 400px;
+    border-radius: 15px;
+    padding: 20px;
+    transition: 0.2s;
+}
+
+/* Header */
+#qr-header {
+    text-align: center;
+}
+
+#qr-header h1 {
+    font-size: 1.8rem;
+    margin-bottom: 15px;
+}
+
+#qr-header p {
+    color: #333;
+    font-size: 0.9rem;
+}
+
+/* Form */
+#qr-form {
+    margin: 20px 15px;
+}
+
+#qr-form input,
+#qr-form button {
+    width: 100%;
+    height: 48px;
+    border: none;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+
+#qr-form input {
+    border: 1px solid #333;
+    padding: 10px 15px;
+}
+
+#qr-form button {
+    background-color: #03504c;
+    color: #fff;
+    font-size: 1.2rem;
+    margin-top: 20px;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.4s;
 }
