--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ body {
     transition: 0.2s;
 }
 
+.container.active{
+    height: 490px;
+}
+
 /* Header */
 #qr-header {
     text-align: center;
@@ -53,7 +57,7 @@ body {
 }
 
 #qr-form input {
-    border: 1px solid #333;
+    border: 1px solid #ccc;
     padding: 10px 15px;
 }
 
@@ -65,4 +69,25 @@ body {
     cursor: pointer;
     opacity: 0.5;
     transition: 0.4s;
+}
+
+#qr-form button:hover {
+    opacity: 1;
+}
+
+/* QR Code */
+
+#qr-code {
+    display: flex;
+    opacity: 0;
+    border: 1px solid #ccc;
+    padding: 30px 0;
+    margin: 20px 15px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;    
+}
+
+.container.active #qr-code{
+    opacity: 1;
 }
